# solana-bet-placing-market

./: Anchor.toml  eslint.config.js  index.html  package.json  tailwind.config.js  tsconfig.json  usd-ubb-metadata.json  vite.config.ts
programs/solana-bet-placing-market/: Cargo.toml
programs/solana-bet-placing-market/src/: lib.rs  market_accounts.rs
public/: index.html
src/: App.tsx  WalletContextProvider.tsx  index.tsx  supabase.ts  useMarketProgram.ts
src/blockchain/: blockchainTransactions.ts  computeLiquidityBenefits.ts  computePotentialShareProfit.ts  createAssociatedTokenAccounts.ts  ensureFactory.ts  heliusEventListener.ts
src/components/: AddInitialLiquidityModal.tsx  AddLiquidityForm.tsx  AddLiquidityModal.tsx  ConnectWalletButton.tsx  CreateMarket.tsx  EmptyState.tsx  Header.tsx  LiquidityPool.tsx  LiquidityPoolSection.tsx  MarketCard.tsx  MarketContext.tsx  MarketDetails.tsx  MarketGrid.tsx  MarketList.tsx  MarketPriceChart.tsx  MarketTradeSection.tsx  NavBar.tsx  ProbabilityRing.tsx  RemoveLiquidityForm.tsx  ResolveMarketModal.tsx  TransactionDetailModal.tsx
src/idl/: solana_bet_placing_market.json
src/lib/: anchor.ts  constants.ts  supabase.ts  useDebounce.ts
src/styles/: globals.css
tests/: solana-bet-placing-market.ts
